--- a/css/sass/partials/_styles.scss
+++ b/css/sass/partials/_styles.scss
@@ -363,6 +363,7 @@ $light-grey: #eee;
             i {
                 padding-bottom: 10px;
                 animation: hop 1s infinite;
+                margin: auto auto;
             }
 
             :visited, :link {
